--- a/index.html
+++ b/index.html
@@ -243,16 +243,26 @@
                         <div class="row">
                             <input type="text" value="1-A-1" />
                             <input type="text" value="Digoxina 0,25 mg Comp."/>
-                            <input type="number" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4"/>
-                            <input type="number" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4"/>
-                            <input type="number" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4" class="l1-c3"/>
-                            <input type="text" readonly class="l1-c4" />
-                            <input type="text" class="l1-c5"/> 
-                            <input type="text" />
-                            <input type="text" readonly class="l1-c7"/>
-                            <input type="text" readonly />
-                            <input type="text" />
-                            <input type="text" />
+                            <!-- Stock no Início do Período -->
+                            <input type="number" min="0" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4" data-diferenca="l1-c6-menos-l1-c4" data-diferencaoutput="l1-c7" />
+                            <!-- Soma das Entradas -->
+                            <input type="number" min="0" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4" data-diferenca="l1-c6-menos-l1-c4" data-diferencaoutput="l1-c7" />
+                            <!-- Soma das Saídas -->
+                            <input type="number" min="0" class="l1-c3" data-stfp="l1-c1c2-menos-l1-c3" data-stfpoutput="l1-c4" data-diferenca="l1-c6-menos-l1-c4" data-diferencaoutput="l1-c7" data-qtdarequisitar="l1-c3-menos-l1-c6" data-qtdarequisitaroutput="l1-c8" />
+                            <!-- Stock Teórico Fim do Período -->
+                            <input type="number" min="0" readonly class="l1-c4" />
+                            <!-- Total dos Pedidos -->
+                            <input type="number" min="0" /> 
+                            <!-- Inventário do Stock -->
+                            <input type="number" min="0" class="l1-c6"  data-diferenca="l1-c6-menos-l1-c4" data-diferencaoutput="l1-c7" data-qtdarequisitar="l1-c3-menos-l1-c6" data-qtdarequisitaroutput="l1-c8" />
+                            <!-- Diferença -->
+                            <input type="number" min="0" readonly class="l1-c7"/>
+                            <!-- Quantidade a requisitar -->
+                            <input type="number" min="0" readonly class="l1-c8" />
+                            <!-- Quantidade pedida -->
+                            <input type="number" min="0" />
+                            <!-- Quantidade autorizada -->
+                            <input type="number" min="0" />
                         </div>
                         <div class="row">
                             <input type="text" value="1-C-1" />
