Corrigi a linha de Clorpromazina 100 mg Comp., Ketoconazol 200 mg Comp. e Hidrocortisona Creme.

--- a/index.html
+++ b/index.html
@@ -2606,21 +2606,21 @@
                             <input type="text" value="7-J-2" />
                             <input type="text" value="Clorpromazina 100 mg Comp."/>
                             <!-- Stock no Início do Período -->
-                            <input type="number" min="0" data-stfp="l102-c1c2-menos-l102-c3" data-stfpoutput="l102-c4" data-diferenca="l102-c6-menos-l102-c4" data-diferencaoutput="l102-c7" />
+                            <input type="number" min="0" data-stfp="l0102-c1c2-menos-l0102-c3" data-stfpoutput="l0102-c4" data-diferenca="l0102-c6-menos-l0102-c4" data-diferencaoutput="l0102-c7" />
                             <!-- Soma das Entradas -->
-                            <input type="number" min="0" data-stfp="l102-c1c2-menos-l102-c3" data-stfpoutput="l102-c4" data-diferenca="l102-c6-menos-l102-c4" data-diferencaoutput="l102-c7" />
+                            <input type="number" min="0" data-stfp="l0102-c1c2-menos-l0102-c3" data-stfpoutput="l0102-c4" data-diferenca="l0102-c6-menos-l0102-c4" data-diferencaoutput="l0102-c7" />
                             <!-- Soma das Saídas -->
-                            <input type="number" min="0" class="l102-c3" data-stfp="l102-c1c2-menos-l102-c3" data-stfpoutput="l102-c4" data-diferenca="l102-c6-menos-l102-c4" data-diferencaoutput="l102-c7" data-qtdarequisitar="l102-c3-menos-l102-c6" data-qtdarequisitaroutput="l102-c8" />
+                            <input type="number" min="0" class="l0102-c3" data-stfp="l0102-c1c2-menos-l0102-c3" data-stfpoutput="l0102-c4" data-diferenca="l0102-c6-menos-l0102-c4" data-diferencaoutput="l0102-c7" data-qtdarequisitar="l0102-c3-menos-l0102-c6" data-qtdarequisitaroutput="l0102-c8" />
                             <!-- Stock Teórico Fim do Período -->
-                            <input type="number" min="0" readonly class="l102-c4" />
+                            <input type="number" min="0" readonly class="l0102-c4" />
                             <!-- Total dos Pedidos -->
                             <input type="number" min="0" /> 
                             <!-- Inventário do Stock -->
-                            <input type="number" min="0" class="l102-c6"  data-diferenca="l102-c6-menos-l102-c4" data-diferencaoutput="l102-c7" data-qtdarequisitar="l102-c3-menos-l102-c6" data-qtdarequisitaroutput="l102-c8" />
+                            <input type="number" min="0" class="l0102-c6"  data-diferenca="l0102-c6-menos-l0102-c4" data-diferencaoutput="l0102-c7" data-qtdarequisitar="l0102-c3-menos-l0102-c6" data-qtdarequisitaroutput="l0102-c8" />
                             <!-- Diferença -->
-                            <input type="number" min="0" readonly class="l102-c7"/>
+                            <input type="number" min="0" readonly class="l0102-c7"/>
                             <!-- Quantidade a requisitar -->
-                            <input type="number" min="0" readonly class="l102-c8" />
+                            <input type="number" min="0" readonly class="l0102-c8" />
                             <!-- Quantidade pedida -->
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
@@ -4194,21 +4194,21 @@
                             <input type="text" value="8-Q-6" />
                             <input type="text" value="Ketoconazol 200 mg Comp."/>
                             <!-- Stock no Início do Período -->
-                            <input type="number" min="0" data-stfp="l167-c1c2-menos-l167-c3" data-stfpoutput="l167-c4" data-diferenca="l167-c6-menos-l167-c4" data-diferencaoutput="l167-c7" />
+                            <input type="number" min="0" data-stfp="l0167-c1c2-menos-l0167-c3" data-stfpoutput="l0167-c4" data-diferenca="l0167-c6-menos-l0167-c4" data-diferencaoutput="l0167-c7" />
                             <!-- Soma das Entradas -->
-                            <input type="number" min="0" data-stfp="l167-c1c2-menos-l167-c3" data-stfpoutput="l167-c4" data-diferenca="l167-c6-menos-l167-c4" data-diferencaoutput="l167-c7" />
+                            <input type="number" min="0" data-stfp="l0167-c1c2-menos-l0167-c3" data-stfpoutput="l0167-c4" data-diferenca="l0167-c6-menos-l0167-c4" data-diferencaoutput="l0167-c7" />
                             <!-- Soma das Saídas -->
-                            <input type="number" min="0" class="l167-c3" data-stfp="l167-c1c2-menos-l167-c3" data-stfpoutput="l167-c4" data-diferenca="l167-c6-menos-l167-c4" data-diferencaoutput="l167-c7" data-qtdarequisitar="l167-c3-menos-l167-c6" data-qtdarequisitaroutput="l167-c8" />
+                            <input type="number" min="0" class="l0167-c3" data-stfp="l0167-c1c2-menos-l0167-c3" data-stfpoutput="l0167-c4" data-diferenca="l0167-c6-menos-l0167-c4" data-diferencaoutput="l0167-c7" data-qtdarequisitar="l0167-c3-menos-l0167-c6" data-qtdarequisitaroutput="l0167-c8" />
                             <!-- Stock Teórico Fim do Período -->
-                            <input type="number" min="0" readonly class="l167-c4" />
+                            <input type="number" min="0" readonly class="l0167-c4" />
                             <!-- Total dos Pedidos -->
                             <input type="number" min="0" /> 
                             <!-- Inventário do Stock -->
-                            <input type="number" min="0" class="l167-c6"  data-diferenca="l167-c6-menos-l167-c4" data-diferencaoutput="l167-c7" data-qtdarequisitar="l167-c3-menos-l167-c6" data-qtdarequisitaroutput="l167-c8" />
+                            <input type="number" min="0" class="l0167-c6"  data-diferenca="l0167-c6-menos-l0167-c4" data-diferencaoutput="l0167-c7" data-qtdarequisitar="l0167-c3-menos-l0167-c6" data-qtdarequisitaroutput="l0167-c8" />
                             <!-- Diferença -->
-                            <input type="number" min="0" readonly class="l167-c7"/>
+                            <input type="number" min="0" readonly class="l0167-c7"/>
                             <!-- Quantidade a requisitar -->
-                            <input type="number" min="0" readonly class="l167-c8" />
+                            <input type="number" min="0" readonly class="l0167-c8" />
                             <!-- Quantidade pedida -->
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
@@ -5278,21 +5278,21 @@
                             <input type="text" value="15-B-11" />
                             <input type="text" value="Hidrocortisona 30 g Creme cutâneo a 1%"/>
                             <!-- Stock no Início do Período -->
-                            <input type="number" min="0" data-stfp="l211-c1c2-menos-l211-c3" data-stfpoutput="l211-c4" data-diferenca="l211-c6-menos-l211-c4" data-diferencaoutput="l211-c7" />
+                            <input type="number" min="0" data-stfp="l0211-c1c2-menos-l0211-c3" data-stfpoutput="l0211-c4" data-diferenca="l0211-c6-menos-l0211-c4" data-diferencaoutput="l0211-c7" />
                             <!-- Soma das Entradas -->
-                            <input type="number" min="0" data-stfp="l211-c1c2-menos-l211-c3" data-stfpoutput="l211-c4" data-diferenca="l211-c6-menos-l211-c4" data-diferencaoutput="l211-c7" />
+                            <input type="number" min="0" data-stfp="l0211-c1c2-menos-l0211-c3" data-stfpoutput="l0211-c4" data-diferenca="l0211-c6-menos-l0211-c4" data-diferencaoutput="l0211-c7" />
                             <!-- Soma das Saídas -->
-                            <input type="number" min="0" class="l211-c3" data-stfp="l211-c1c2-menos-l211-c3" data-stfpoutput="l211-c4" data-diferenca="l211-c6-menos-l211-c4" data-diferencaoutput="l211-c7" data-qtdarequisitar="l211-c3-menos-l211-c6" data-qtdarequisitaroutput="l211-c8" />
+                            <input type="number" min="0" class="l0211-c3" data-stfp="l0211-c1c2-menos-l0211-c3" data-stfpoutput="l0211-c4" data-diferenca="l0211-c6-menos-l0211-c4" data-diferencaoutput="l0211-c7" data-qtdarequisitar="l0211-c3-menos-l0211-c6" data-qtdarequisitaroutput="l0211-c8" />
                             <!-- Stock Teórico Fim do Período -->
-                            <input type="number" min="0" readonly class="l211-c4" />
+                            <input type="number" min="0" readonly class="l0211-c4" />
                             <!-- Total dos Pedidos -->
                             <input type="number" min="0" /> 
                             <!-- Inventário do Stock -->
-                            <input type="number" min="0" class="l211-c6"  data-diferenca="l211-c6-menos-l211-c4" data-diferencaoutput="l211-c7" data-qtdarequisitar="l211-c3-menos-l211-c6" data-qtdarequisitaroutput="l211-c8" />
+                            <input type="number" min="0" class="l0211-c6"  data-diferenca="l0211-c6-menos-l0211-c4" data-diferencaoutput="l0211-c7" data-qtdarequisitar="l0211-c3-menos-l0211-c6" data-qtdarequisitaroutput="l0211-c8" />
                             <!-- Diferença -->
-                            <input type="number" min="0" readonly class="l211-c7"/>
+                            <input type="number" min="0" readonly class="l0211-c7"/>
                             <!-- Quantidade a requisitar -->
-                            <input type="number" min="0" readonly class="l211-c8" />
+                            <input type="number" min="0" readonly class="l0211-c8" />
                             <!-- Quantidade pedida -->
                             <input type="number" min="0" />
                             <!-- Quantidade autorizada -->
