Criei a linha de referência para indicar o fármaco e a coluna focada.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <script src="scripts/webstorage.js"></script>
         <script src="scripts/backup.js"></script>
         <script src="scripts/balancete.js"></script>
+        <script src="scripts/referencia.js"></script>
         <script src="scripts/print.js"></script>
 
         <noscript>O seu navegador está com o JavaScript desabilitado e isso bloqueia as funcionalidades desta plataforma. Habilite-o nas configurações do navegador e recarregue a página.</noscript>
@@ -7254,6 +7255,12 @@
                 </aside>
             </div>
 
+            <div class="reference-container">
+                <div class="linha ref-col">
+                    <span class="output-row"></span>
+                    <span class="output-col"></span>
+                </div>
+            </div>
             <aside class="manipulacao-do-menu">    
                 <!-- Caixa de pesquisa "Ir para" -->
                 <div class="pesquisa">
