Adicionei favicon e tag do google search console.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <meta name="author" content="Adérito Félix Quinamine" />
 
         <!-- PARTILHA NAS REDES SOCIAIS -->
-        <meta property="og:url" content="https://www.quinamine.github.io/requisicao-balancete/index.html" />
+        <meta property="og:url" content="https://quinamin.github.io/requisicao-balancete/index.html" />
         <meta property="og:title" content="Requisição/Balancete" />
         <meta property="og:description" content="Requisição/Balancete é um serviço online gratuito que auxilia na elaboração de requisição/balancete através do cálculo automático do Stock Teórico Fim do Período (SF), Diferença entre o Stock Teórico e Stock Físico e Quantidade a Requisitar, com base nos dados inseridos pelo usuário (Profissional de Saúde). Tem a estrutura idêntica ao modelo da ficha de requisição/balancete actualmente (2023) vigente no Serviço Nacional de Saúde (SNS) em Moçambique." />
-        <meta property="og:image" content="https://www.quinamine.github.io/requisicao-balancete/images/requisicao-balancete.png" />
+        <meta property="og:image" content="https://quinamin.github.io/requisicao-balancete/images/requisicao-balancete.png" />
 
         <!-- DESIGN -->
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
