--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         <script src="scripts/referencia.js"></script>
         <script src="scripts/print.js"></script>
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-F06HER5SBY"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-F06HER5SBY');
+        </script>
+
         <noscript>O seu navegador está com o JavaScript desabilitado e isso bloqueia as funcionalidades desta plataforma. Habilite-o nas configurações do navegador e recarregue a página.</noscript>
 
     </head>
